# general-data-collector

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  generate_crawlers.py  revert_to_uv_only.py  update_makefiles.py
crawlers/airtable/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/angellist/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/arabnet/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/betalist/: ARCHITECTURE.md  Makefile  README.md  USAGE.md  crawler.py  demo.py  pyproject.toml  test_parser.py
crawlers/betapage/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/companies_house/: ARCHITECTURE.md  Makefile  README.md  USAGE.md  USAGE_PROFILES.md  companies.txt  crawler.py  crawler_companies.py  crawler_profiles.py  demo.py  extract_officer_urls.py  officer_urls.txt  pyproject.toml
crawlers/crunchbase/: ARCHITECTURE.md  Makefile  README.md  USAGE_PROFILES.md  crawler.py  crunchbase_profile.py  profiles.txt  pyproject.toml
crawlers/crunchbase/tests/: test_crawler.py
crawlers/f6s/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/growjo/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/harmonic_ai/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml  test_functional.py
crawlers/infogreffe/: ARCHITECTURE.md  Makefile  README.md  crawler.py  pyproject.toml
crawlers/launched/: ARCHITECTURE.md  Makefile  README.md  crawler.py  (+1 more)
(+81 files in other folders)
